# DAE-Pipeline-CPU

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  spec.md
devices/: CMakeLists.txt  README.md
devices/boot_rom/: CMakeLists.txt
devices/boot_rom/include/: boot_rom.h
devices/boot_rom/src/: boot_rom.c
devices/boot_rom/tests/: test_boot_rom.c
devices/clint/: CMakeLists.txt
devices/clint/include/: clint.h
devices/clint/src/: clint.c
devices/clint/tests/: test_clint.c
devices/common/: CMakeLists.txt
devices/common/include/: axi_resp.h  common.h  logging_mmio_device.h  mem_map.h  mmio_device.h  pma_defs.h  terminal_backend.h  tickable.h  ticker.h
devices/common/src/: logging_mmio_device.c  mem_map.c  mmio_device.c  terminal_backend.c  tickable.c  ticker.c
devices/common/tests/: test_logging_mmio_device.c
devices/dram/: CMakeLists.txt
devices/dram/include/: dram.h
devices/dram/src/: dram.c
devices/dram/tests/: test_dram.c
devices/irq_agg/: CMakeLists.txt
devices/irq_agg/include/: irq_agg.h
devices/irq_agg/src/: irq_agg.c
devices/irq_agg/tests/: test_irq_agg.c
devices/uart/: CMakeLists.txt
devices/uart/include/: uart.h
devices/uart/src/: uart.c
devices/uart/tests/: test_uart.c
docs/: architecture.md  classic-5-stage-to-dae.md  epoch-token-recovery.md  lab-roadmap.md  scoreboard-forwarding.md  traps-csr-stores.md
dpi/: snake_soc_dpi.c  snake_soc_dpi.h
elf_loader/: CMakeLists.txt
elf_loader/include/: elf_loader.h
elf_loader/src/: elf_loader.c
elf_loader/tests/: test_elf_loader.c
freertos_demo/: CMakeLists.txt
freertos_demo/app/: main.c
freertos_demo/include/: FreeRTOSConfig.h
freertos_demo/port_glue/: app_irq_handler.c  hooks.c
include/: riscv.svh  uarch.svh
riscv-env-custom/snake/: link.ld  riscv_test.h
runtime/: CMakeLists.txt  README.md  link.ld  toolchain.cmake
runtime/host_tests/: CMakeLists.txt  mock_hal.c  mock_hal.h  mock_heap.S  test_malloc.c  test_printf.c  test_string.c
runtime/include/: runtime.h
runtime/include/hal/: halt.h  uart.h
runtime/include/stdlib/: assert.h  stdio.h  stdlib.h  string.h
runtime/src/crt/: start.S
runtime/src/hal/: halt.c  uart.c
runtime/src/stdlib/: assert.c  stdio.c  stdlib.c  string.c
scripts/: run-freertos-demo.sh  run-riscv-tests.sh
snake_soc/: CMakeLists.txt
snake_soc/include/: snake_soc.h
snake_soc/src/: snake_soc.c
src/: CSRFile.sv  Top.sv  alu.sv  backend.sv  branch_unit.sv  decoder.sv  exe_stage.sv  fifo.sv  frontend.sv  id_stage.sv  if_stage.sv  load_data_filter.sv  lsu.sv  mem_stage.sv  regfile.sv  scoreboard.sv  wb_stage.sv
tb/: tb_top.sv
tests/riscv-tests/: CMakeLists.txt
